--- a/.github/workflows/export_package.yml
+++ b/.github/workflows/export_package.yml
@@ -30,7 +30,7 @@ jobs:
             Unity-Library-${{ env.UNITY_VERSION }}-
 
       - name: Set up Unity
-        uses: game-ci/unity-setup@v2
+        uses: game-ci/unity-Setup@v4
         with:
           unity-version: ${{ env.UNITY_VERSION }}
           unity-license: ${{ secrets.UNITY_LICENSE }}
@@ -70,7 +70,7 @@ jobs:
             Unity-Library-${{ env.UNITY_VERSION }}-
 
       - name: Set up Unity
-        uses: game-ci/unity-setup@v2
+        uses: game-ci/unity-Setup@v4
         with:
           unity-version: ${{ env.UNITY_VERSION }}
           unity-license: ${{ secrets.UNITY_LICENSE }}
